Closed Bug 1855756 Opened 2 years ago Closed 2 years ago

WPT failures in css/motion/offset-path-ray-019.html

Categories

(Core :: CSS Parsing and Computation, defect)

defect

Tracking

()

RESOLVED FIXED
120 Branch
Tracking Status
firefox120 --- fixed

People

(Reporter: twisniewski, Assigned: boris)

References

(Blocks 1 open bug, )

Details

Attachments

(1 file)

Safari and Chrome now pass offset-path-ray-019.html as of WebKit preview 179, and Safari also passes offset-path-ray-022.html (after this bug was fixed).

Assignee: nobody → boris.chiou
Blocks: motion-1
Severity: -- → S3

Move the fix of WPT failures in css/motion/offset-path-ray-022.html into Bug 1860177. It's not easy and may be a spec issue.

Summary: WPT failures in css/motion/offset-path-ray-[019,022].html → WPT failures in css/motion/offset-path-ray-019.html

It looks like our formula doesn't work well for 0deg and 90deg because
it's not a triangle when theta is 0deg or 90deg. So we handle them
separately.

Pushed by bchiou@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/94cabc902448 Fix the edge cases when the angle is 0deg (or 90deg) for ray(). r=hiro
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 120 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: