Bug 1855756 - Fix the edge cases when the angle is 0deg (or 90deg) for ray(). r=hiro

It looks like our formula doesn't work well for 0deg and 90deg because
it's not a triangle when theta is 0deg or 90deg. So we handle them
separately.

Differential Revision: https://phabricator.services.mozilla.com/D191495