gfx/2d/BaseRect.h
@@ -97,6 +97,14 @@ struct BaseRect {
     return Contains(aPoint.x, aPoint.y);
   }
 
+  // Returns true if this rectangle contains the point, considering points on
+  // all edges of the rectangle to be contained (as compared to Contains()
+  // which only includes points on the top & left but not bottom & right edges).
+  MOZ_ALWAYS_INLINE bool ContainsInclusively(const Point& aPoint) const {
+    return x <= aPoint.x && aPoint.x <= XMost() && y <= aPoint.y &&
+           aPoint.y <= YMost();
+  }
+
   // Intersection. Returns TRUE if the receiver's area has non-empty
   // intersection with aRect's area, and FALSE otherwise.
   // Always returns false if aRect is empty or 'this' is empty.
